--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    avis 2
+                    avis en attente
                   </p>
                 </div>
 
