--- a/index.html
+++ b/index.html
@@ -300,7 +300,8 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    avis en attente
+                    Il est d'une grande fiabilité. Il respecte les délais, communique de manière transparente et est toujours disponible pour répondre aux questions ou pour apporter des ajustements. Il est à la fois compétent et créatif. Il sait transformer des idées complexes en applications pratiques et intuitives.
+                    Son attitude positive et sa volonté constante de s'améliorer sont toujours agréables. C'est un plaisir de collaborer avec quelqu'un d'aussi motivé. Je le recommande vivement pour tout projet, car je suis convaincue qu'il saura continuer à exceller dans tout ce qu'il entreprend. 
                   </p>
                 </div>
 
